--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,7 @@ upstream unicorn {
 
 server {
   listen 8080 default deferred;
-  server_name test.metingursoy.com;
+  server_name localhost;
   root /home/deployer/apps/metin/current/public;
 
   location ^~ /assets/ {
